--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,17 +27,21 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cached_network_image: ^3.2.3
   carousel_slider: ^4.2.1
   cloud_firestore: ^4.5.0
   cupertino_icons: ^1.0.2
   firebase_auth: ^4.3.0
   firebase_core: ^2.8.0
+  firebase_storage: ^11.1.0
   flutter:
     sdk: flutter
   flutter_svg: ^2.0.3
   flutter_zoom_drawer: ^3.0.4
   google_fonts: ^4.0.3
   google_nav_bar: ^5.0.6
+  image_picker: ^0.8.7+1
+  shimmer: ^2.0.0
   stacked: ^3.2.0
   stacked_services: ^1.0.0
 
