--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,14 +50,22 @@ dependencies:
   stacked_services: ^1.0.0
 
 dev_dependencies:
+  flutter_lints: ^1.0.0
   build_runner: ^2.2.0
+  flutter_launcher_icons: "^0.13.0"
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/logoa.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^1.0.0
+
   flutter_test:
     sdk: flutter
   mockito: ^5.3.2
