--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,8 +28,8 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   another_flushbar: ^1.12.29
+  auth_buttons: ^1.0.1+4
   badges: ^3.0.3
-
   cached_network_image: ^3.2.3
   carousel_slider: ^4.2.1
   cloud_firestore: ^4.5.0
@@ -45,6 +45,7 @@ dependencies:
   flutter_zoom_drawer: ^3.0.4
   google_fonts: ^4.0.3
   google_nav_bar: ^5.0.6
+  google_sign_in: ^6.1.0
   image_picker: ^0.8.7+1
   shimmer: ^2.0.0
   stacked: ^3.2.1
@@ -52,14 +53,14 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^2.3.3
-  stacked_generator: ^1.0.0
   flutter_launcher_icons: "^0.13.0"
   flutter_lints: ^1.0.0
+  stacked_generator: ^1.0.0
 
 flutter_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/images/logoa.png"
+  image_path: "assets/images/Organic.png"
   min_sdk_android: 21 # android min sdk min:16, default 21
 
   # The "flutter_lints" package below contains a set of recommended lints to
