--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,12 +44,12 @@ dependencies:
   flutter_cache_manager: ^3.3.0
   flutter_svg: ^2.0.3
   flutter_zoom_drawer: ^3.0.4
-  google_fonts: ^4.0.3
+  google_fonts: ^5.1.0
   google_nav_bar: ^5.0.6
-  google_sign_in: ^6.1.0
-  image_picker: ^0.8.7+1
+  google_sign_in: ^6.1.2
+  image_picker: ^1.0.0
   responsive_sizer: ^3.1.1
-  shimmer: ^2.0.0
+  shimmer: ^3.0.0
   stacked: ^3.2.1
   stacked_hooks: ^0.2.3
   stacked_services: ^1.0.2
@@ -57,7 +57,7 @@ dependencies:
 dev_dependencies:
   build_runner: ^2.3.3
   flutter_launcher_icons: "^0.13.0"
-  flutter_lints: ^1.0.0
+  flutter_lints: ^2.0.2
   stacked_generator: ^1.0.0
 
 flutter_icons:
